[package]
name = "conifer-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv_codegen = "0.15"
gloo-net = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = "0.19"
web-sys = { version = "0.3", features = ["Document", "Window"] }
wasm-bindgen = "0.2"
